--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -7,10 +7,12 @@ pytorch:
     model_name: "vgg16" # resnet18 efficientnet_v2_s vgg11-19 vgg16 mobilenet_v3_small
     weights: "DEFAULT" # updated since torchvision v0.13. Refer to official doc for customized values.
     pretrained: True # for timm only
+    fine_tune: True
     unfreeze: "partial" # all (unfreeze all layers) | none (unfreeze the classifier only) | partial (unfreeze the classifier and part of the backbone)
-    unfreeze_modules: # valid when unfreeze == "partial". module name followed by the number of the last layers within the module to unfreeze.
-        # -1 (freeze all layers within the module) | int (last N layers)
+    fine_tune_modules: # valid when unfreeze == "partial". module name followed by the number of the last layers within the module to unfreeze.
+        pre_logits: ["fc1", "fc2"]
         features: 3
+
     model_type:
         _target_: src.model.pytorch_model.PTClassificationModel
     num_classes: ${data_module.dataset.num_classes}
@@ -26,13 +28,7 @@ tensorflow:
     image_size: ${data_module.dataset.image_size}
     device: ${device}
     pretrained: True
-    unfreeze_layers: -1 # -1 (All) | int (Last N Layers) | 0 (Freeze All)
+    # unfreeze_layers: -1 # -1 (All) | int (Last N Layers) | 0 (Freeze All)
     fine_tune: True # True or False
-    fine_tune_layers: [
-            "prediction_modified",
-            "fc1",
-            "fc2",
-            "block5_conv3",
-            "block5_conv2",
-        ] # prediction layer need to be included. If not, the weights will not be updated
+    fine_tune_layers: ["prediction_modified", "fc1", "fc2", "block5_conv3"] # prediction layer need to be included. If not, the weights will not be updated
     dropout_rate: 0.3
