fix: add unfreezed layer to block5

--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -30,5 +30,13 @@ tensorflow:
     pretrained: True
     # unfreeze_layers: -1 # -1 (All) | int (Last N Layers) | 0 (Freeze All)
     fine_tune: True # True or False
-    fine_tune_layers: ["prediction_modified", "fc1", "fc2", "block5_conv3"] # prediction layer need to be included. If not, the weights will not be updated
+    fine_tune_layers: [
+            "prediction_modified",
+            "fc1",
+            "fc2",
+            "block5_pool",
+            "block5_conv3",
+            "block5_conv2",
+            "block5_conv1",
+        ] # prediction layer need to be included. If not, the weights will not be updated
     dropout_rate: 0.3
