--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,8 +1,9 @@
-device: "auto"  # "auto" to select available gpu. "cpu"|"cuda"|"mps"
+device: "auto" # "auto" to select available gpu. "cpu"|"cuda"|"mps"
 project_name: "cifar10" #rsna | cifar10 | vegfru | vegfru5 | vegfru20
 debug: True
 framework: "tensorflow" # 'pytorch' | 'tensorflow'
 random_state: 11
+view_only: False
 
 defaults:
   - use_case: classification # classification | detection | segmentation
