--- a/peekingduck/training/configs/trainer/classification.yaml
+++ b/peekingduck/training/configs/trainer/classification.yaml
@@ -63,6 +63,7 @@ pytorch:
         #     verbose: False
 
     global_train_params:
+        manual_seed: ${random_state}
         epochs: 10
         patience: 3
         model_name: ${model.pytorch.model_name}
@@ -108,6 +109,7 @@ tensorflow:
         loss_params:
             from_logits: False
     global_train_params:
+        manual_seed: ${random_state}
         epochs: 10
         debug: ${debug}
         debug_epochs: 3
