--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -1,5 +1,5 @@
 pytorch:
-    adapter: "torchvision" # torchvision | timm
+    adapter: "timm" # torchvision | timm
     task: "classification"
     # model name references:
     # https://pytorch.org/vision/stable/models.html#classification
@@ -11,7 +11,14 @@ pytorch:
     # valid when unfreeze == "partial". module name followed by the number of the last layers within the module to unfreeze.
     fine_tune_modules:
         features: 7
-        classifier: 7
+        pre_logits:
+            [
+                "fc1",
+                "act1",
+                "drop",
+                "fc2",
+                "act2",
+            ]
     model_type:
         _target_: src.model.pytorch_model.PTClassificationModel
     num_classes: ${data_module.dataset.num_classes}
