fix: added tensorflow packages in the requirements file for mac.

--- a/peekingduck/training/requirements_mac.txt
+++ b/peekingduck/training/requirements_mac.txt
@@ -8,13 +8,14 @@ numpy
 scikit-learn
 torch
 torchvision
+torchmetrics
+timm
 torchinfo
 tqdm
-torchmetrics
 albumentations
 imagesize
 matplotlib
-torchinfo
-timm
 tabulate
 wandb
+tensorflow-macos
+tensorflow-metal
