--- a/peekingduck/training/configs/model/classification.yaml
+++ b/peekingduck/training/configs/model/classification.yaml
@@ -1,6 +1,6 @@
 pytorch:
     adapter: "timm" # torchvision | timm
-    task: "classification"
+    task: ${use_case}
     # model name references:
     # https://pytorch.org/vision/stable/models.html#classification
     # https://huggingface.co/docs/timm/reference/models#timm.list_models
@@ -11,21 +11,14 @@ pytorch:
     # valid when unfreeze == "partial". module name followed by the number of the last layers within the module to unfreeze.
     fine_tune_modules:
         features: 7
-        pre_logits:
-            [
-                "fc1",
-                "act1",
-                "drop",
-                "fc2",
-                "act2",
-            ]
+        pre_logits: ["fc1", "act1", "drop", "fc2", "act2"]
     model_type:
         _target_: src.model.pytorch_model.PTClassificationModel
     num_classes: ${data_module.dataset.num_classes}
     device: ${device}
 
 tensorflow:
-    task: "classification"
+    task: ${use_case}
     model_name: "VGG16" # VGG16 ResNet50 EfficientNetV2S
     model_type:
         _target_: src.model.tensorflow_model.TFClassificationModelFactory
