--- a/peekingduck/training/requirements.txt
+++ b/peekingduck/training/requirements.txt
@@ -8,7 +8,7 @@ numpy
 scikit-learn
 --extra-index-url https://download.pytorch.org/whl/cu113
 torch==1.12.1+cu113
-torchvision >= 0.13
+torchvision==0.13.1+cu113
 torchinfo
 tensorflow < 2.11 # 2.11 on cuda will encounter issue with the official CUDA installation guide during the training stage.
 tqdm
