--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ tensorflow >= 2.2
 torch >= 1.10.0
 torchvision >= 0.11.1
 tqdm == 4.45.0
-typeguard >= 2.13.3
+typeguard == 2.13.3
 pydantic
 hydra-core
 pandas
