--- a/requirements_cicd.txt
+++ b/requirements_cicd.txt
@@ -10,6 +10,8 @@ pytest-lazy-fixture == 0.6.3    # can remove if/when https://docs.pytest.org/en/
 scikit-image == 0.18.0
 sphinx-autodoc-typehints == 1.20.1
 sphinx-rtd-theme == 1.1.1
+sphinx-copybutton == 0.5.0
+sphinx-tabs == 3.4.1
 texttable == 1.6.7  # for pretty print scripts/check_links.py output
 types-PyYAML == 6.0.12.2
 types-requests == 2.28.11.7
