--- a/requirements_cicd.txt
+++ b/requirements_cicd.txt
@@ -9,9 +9,9 @@ pytest == 7.2.0
 pytest-lazy-fixture == 0.6.3    # can remove if/when https://docs.pytest.org/en/7.1.x/proposals/parametrize_with_fixtures.html gets implemented
 scikit-image == 0.18.0
 sphinx-autodoc-typehints == 1.20.1
-sphinx-rtd-theme
-sphinx-copybutton
-sphinx-tabs
+sphinx-rtd-theme == 1.2.0
+sphinx-copybutton == 0.5.1
+sphinx-tabs == 3.4.1
 texttable == 1.6.7  # for pretty print scripts/check_links.py output
 types-PyYAML == 6.0.12.2
 types-requests == 2.28.11.7
