--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,13 +1,14 @@
 device: "auto" # "auto" to select available gpu. "cpu"|"cuda"|"mps"
-project_name: "cifar10" # rsna | cifar10 | vegfru | vegfru5 | vegfru20
+project_name: "yolox_integration" #rsna | cifar10 | vegfru | vegfru5 | vegfru20
 debug: True
-framework: "tensorflow" # 'pytorch' | 'tensorflow'
+framework: "pytorch" # 'pytorch' | 'tensorflow'
 random_state: 11
 view_only: False
+pipeline: "detection" # classification | detection | segmentation
 
 defaults:
-  - use_case: classification
-  - data_module: cifar10 # rsna | cifar10 | vegfru | vegfru5 | vegfru20
+  - use_case: detection # classification | detection | segmentation
+  - data_module: detection # rsna | cifar10 | vegfru | vegfru5 | vegfru20 | detection
   - model: ${use_case}
   - trainer: ${use_case}
   - callbacks: ${use_case}
