fix: add yolox data dir and default yolox_s weights

--- a/peekingduck/training/.gitignore
+++ b/peekingduck/training/.gitignore
@@ -168,4 +168,9 @@ venv.bak/
 # mypy
 .mypy_cache/
 
+
+# Include dir from training
+!peekingduck/training/src/model/yolox/data
+!peekingduck/training/src/model/weights
+
 ####################
