--- a/peekingduck/training/requirements.txt
+++ b/peekingduck/training/requirements.txt
@@ -6,7 +6,7 @@ hydra-core >= 1.3.1
 pandas >= 1.5.2
 numpy >= 1.18.5
 scikit-learn >= 1.2.0
-torch >= 1.10.0
+torch >= 1.10.0, < 2.0
 torchvision >= 0.11.1
 torchinfo >= 1.7.1
 tensorflow >= 2.2
@@ -16,3 +16,7 @@ albumentations >= 1.3.0
 matplotlib >= 3.6.3
 timm >= 0.6.12
 wandb >= 0.13.9
+loguru >= 0.7.0
+pycocotools >= 2.0.6
+tabulate >= 0.9.0
+thop
