--- a/peekingduck/training/configs/data_module/dataset/cifar10.yaml
+++ b/peekingduck/training/configs/data_module/dataset/cifar10.yaml
@@ -2,9 +2,10 @@ download: True
 url: "https://storage.googleapis.com/peekingduck/data/cifar10.zip"
 blob_file: "cifar10.zip"
 root_dir: "data"
-train_dir: "./${.root_dir}/${project_name}"
-test_dir: "./${.root_dir}/${project_name}"
-train_csv: "./${.root_dir}/${project_name}/train.csv"
+dataset: "cifar10"
+train_dir: "./${.root_dir}/${.dataset}"
+test_dir: "./${.root_dir}/${.dataset}"
+train_csv: "./${.root_dir}/${.dataset}/train.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_name" #class_id
 target_col_id: "class_id"
