--- a/peekingduck/training/configs/data_module/dataset/vegfru20.yaml
+++ b/peekingduck/training/configs/data_module/dataset/vegfru20.yaml
@@ -2,9 +2,10 @@ download: False
 url: "https://storage.googleapis.com/peekingduck/data/vegfru.zip"
 blob_file: "vegfru.zip"
 root_dir: "data"
-train_dir: "./${.root_dir}/vegfru"
-test_dir: "./${.root_dir}/vegfru"
-train_csv: "./${.root_dir}/vegfru/vegfru20.csv"
+dataset: "vegfru"
+train_dir: "./${.root_dir}/${.dataset}"
+test_dir: "./${.root_dir}/${.dataset}"
+train_csv: "./${.root_dir}/${.dataset}/vegfru20.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_name"
 target_col_id: "class_id"
