--- a/peekingduck/training/configs/data_module/resample/train_test_split.yaml
+++ b/peekingduck/training/configs/data_module/resample/train_test_split.yaml
@@ -3,4 +3,4 @@ resample_strategy:
   _partial_: True
   test_size: 0.125
   shuffle: True
-  random_state: ${random_state}
+  random_state: ${use_case.random_state}
