--- a/peekingduck/training/configs/model_analysis/classification.yaml
+++ b/peekingduck/training/configs/model_analysis/classification.yaml
@@ -1,5 +1,5 @@
 entity: "peekingduck"
 project: "${project_name}"
 run_name: "${stores.unique_id}"
-framework: "${framework}"
-debug: ${debug}
+framework: "${use_case.framework}"
+debug: ${use_case.debug}
