--- a/requirements.txt
+++ b/requirements.txt
@@ -22,3 +22,7 @@ albumentations ~= 1.3
 matplotlib >= 3.6.3
 timm >= 0.6.12
 wandb >= 0.13.9
+loguru >= 0.7.0
+pycocotools >= 2.0.6
+tabulate >= 0.9.0
+thop
