--- a/peekingduck/training/requirements.txt
+++ b/peekingduck/training/requirements.txt
@@ -6,8 +6,8 @@ hydra-core >= 1.3.1
 pandas >= 1.5.2
 numpy >= 1.18.5
 scikit-learn >= 1.2.0
-torch >= 1.10.0, < 2.0
-torchvision >= 0.11.1
+torch >= 1.10.0, < 1.13.0
+torchvision >= 0.11.0
 torchinfo >= 1.7.1
 tensorflow >= 2.2
 tqdm == 4.45.0
@@ -20,3 +20,4 @@ loguru >= 0.7.0
 pycocotools >= 2.0.6
 tabulate >= 0.9.0
 thop
+setuptools==59.5.0
