--- a/peekingduck/training/configs/model_analysis/detection.yaml
+++ b/peekingduck/training/configs/model_analysis/detection.yaml
@@ -1,8 +1,8 @@
 wandb:
-    wandb_project: ${project_name} # <project-name>
-    wandb_entity: ${project_name} # <entity>
-    wandb_name: "${project_name}-${stores.unique_id}" # <run-name>
-    wandb_id: ${stores.unique_id} # <run-id>
-    wandb_save_dir: "./outputs/${project_name}/${stores.unique_id}/" # <save-dir>
-    wandb_num_eval_images: null # <num-images>
-    wandb_log_checkpoints: True # <bool>
+    wandb-project: ${project_name} # <project-name>
+    wandb-entity: ${project_name} # <entity>
+    wandb-name: "${project_name}-${stores.unique_id}" # <run-name>
+    wandb-id: ${stores.unique_id} # <run-id>
+    wandb-save_dir: "./outputs/${project_name}/${stores.unique_id}/" # <save-dir>
+    wandb-num_eval_images: null # <num-images>
+    wandb-log_checkpoints: True # <bool>
