--- a/peekingduck/training/requirements.txt
+++ b/peekingduck/training/requirements.txt
@@ -1,3 +1,5 @@
+--index-url https://download.pytorch.org/whl/cu117
+
 black == 22.12.0
 pydantic >= 1.10.4
 hydra-core >= 1.3.1
@@ -15,6 +17,6 @@ matplotlib >= 3.6.3
 timm >= 0.6.12
 wandb >= 0.13.9
 loguru >= 0.7.0
-pycocotools >= 2.0.6
+pycocotools >= 2.0.2
 tabulate >= 0.9.0
 thop
