refactor: consolidate vegfru dataset

--- a/peekingduck/training/configs/data_module/dataset/vegfru.yaml
+++ b/peekingduck/training/configs/data_module/dataset/vegfru.yaml
@@ -5,7 +5,7 @@ root_dir: "data"
 dataset: "vegfru"
 train_dir: "./${.root_dir}/${.dataset}"
 test_dir: "./${.root_dir}/${.dataset}"
-train_csv: "./${.root_dir}/${.dataset}/vegfru_all.csv"
+train_csv: "./${.root_dir}/${.dataset}/train.csv"
 image_path_col_name: "image_path"
 target_col_name: "class_name"
 target_col_id: "class_id"
