--- a/peekingduck/training/requirements.txt
+++ b/peekingduck/training/requirements.txt
@@ -1,4 +1,4 @@
---index-url https://download.pytorch.org/whl/cu117
+--extra-index-url https://download.pytorch.org/whl/cu118
 
 black == 22.12.0
 pydantic >= 1.10.4
@@ -6,8 +6,8 @@ hydra-core >= 1.3.1
 pandas >= 1.5.2
 numpy >= 1.18.5
 scikit-learn >= 1.2.0
-torch >= 1.10.0
-torchvision >= 0.11.0
+torch == 2.0.1+cu118
+torchvision == 0.15.2+cu118
 torchinfo >= 1.7.1
 tensorflow >= 2.2
 tqdm == 4.45.0
