--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
---extra-index-url https://download.pytorch.org/whl/cu118
-
-
 click >= 7.1.2
 colorama == 0.4.4
 huggingface_hub >= 0.9.1
@@ -11,8 +8,8 @@ pyyaml >= 5.3
 requests == 2.24.0
 scipy >= 1.4.1
 tensorflow >= 2.2
-torch == 2.0.1+cu118
-torchvision == 0.15.2+cu118
+torch >= 1.10.0
+torchvision >= 0.11.1
 tqdm == 4.45.0
 typeguard == 2.13.3
 pydantic >= 1.10.4
