--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -16,6 +16,8 @@ jobs:
           python-version: 3.8
           cache: "pip"
       - name: Install dependencies
+        env:
+          PIP_EXTRA_INDEX_URL: https://download.pytorch.org/whl/cu118
         run: |
           python -m pip install --upgrade pip
           pip install wheel
