--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -15,6 +15,7 @@ jobs:
         with:
           python-version: 3.8
           cache: "pip"
+          cache-dependency-path: '**/requirements*.txt'
       - name: Install dependencies
         env:
           PIP_EXTRA_INDEX_URL: https://download.pytorch.org/whl/cu118
