--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -18,12 +18,12 @@ jobs:
           cache-dependency-path: '**/requirements*.txt'
       - name: Install dependencies
         env:
-          PIP_EXTRA_INDEX_URL: https://download.pytorch.org/whl/cu118
+          PIP_INDEX_URL: https://download.pytorch.org/whl/cu118
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu118
-          pip install timm>=0.6.12 torchinfo>=1.7.1 torchmetrics>=0.11.1
+          pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
+          pip install timm>=0.6.12 torchinfo>=1.7.1 torchmetrics>=0.11.1 thop
           pip install -r requirements.txt
           pip install -r requirements_cicd.txt
       - name: Run lint checks
