--- a/.github/workflows/pre_merge_ci.yml
+++ b/.github/workflows/pre_merge_ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install wheel
-          pip install torch torchvision --index-url https://download.pytorch.org/whl/cu118
+          pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu118
           pip install timm>=0.6.12 torchinfo>=1.7.1 torchmetrics>=0.11.1 thop
           pip install -r requirements.txt
           pip install -r requirements_cicd.txt
