refactor: added minor changes to the default config files values

--- a/peekingduck/training/configs/metrics/detection.yaml
+++ b/peekingduck/training/configs/metrics/detection.yaml
@@ -1,3 +1,4 @@
 # Refer to use_case/detection.yaml for more details
+# Refer to model/detection.yaml for more details
 # Refer to trainer/detection.yaml for more details
 # Refer to data_module/detection.yaml for more details
