--- a/peekingduck/training/configs/config.yaml
+++ b/peekingduck/training/configs/config.yaml
@@ -1,7 +1,7 @@
 project_name: "myproject"  # To be configured for each experiment
 
 defaults:
-  - use_case: detection  # To be configured for each experiment < classification | detection | segmentation | ... >
+  - use_case: detection  # classification | detection
 
   # Do NOT change the following
   - data_module: ${use_case}
