--- a/requirements_cicd.txt
+++ b/requirements_cicd.txt
@@ -2,7 +2,7 @@ bandit == 1.6.0
 beautifulsoup4 == 4.11.1
 black == 22.12.0
 coverage == 7.0.5
-mypy >= 1.0.0
+mypy == 1.3.0
 myst-parser == 0.18.1
 pylint == 2.15.10
 pytest == 7.2.0
