--- a/requirements_cicd.txt
+++ b/requirements_cicd.txt
@@ -20,7 +20,7 @@ types-six == 1.16.21.4
 
 # optional requirements
 lap == 0.4.0
-mediapipe >= 0.8.11
+mediapipe >= 0.8.11, <= 0.10.1
 numba >= 0.56.4
 shapely >= 1.7.1
 timm >= 0.6.7
